<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_support">Написать в техподдержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_button_text">Поиск</string>
    <string name="settings_button_text">Настройки</string>
    <string name="oferta_yandex_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developer_course">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">iam@makievmisha.ru</string>
    <string name="error_message">Почтовый клиент не установлен. Установите приложение для отправки электронной почты.</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_issues">Проблемы со связью</string>
    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_ve_been_searching">Вы искали</string>
    <string name="track_was_saved">Трек сохранен</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="release_date">Год</string>
    <string name="collection_name">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="cover_image">Обложка альбома</string>
    <string name="previous_screen">Предыдущий экран</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Воспроизвести</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="timer_default_value">00:00</string>
    <string name="library">Медиатека</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="exit_confirmation">Подтверждение выхода</string>
    <string name="are_you_sure_you_want_to_exit">Вы действительно хотите выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="create">Создать</string>
    <string name="placeholder_image">Выберите обложку для плейлиста</string>
    <string name="playlist_name">Название</string>
    <string name="playlist_description">Описание</string>
    <string name="rationale_title">Для выбора изображения плейлиста приложению нужен доступ к галерее.\nРазрешить?</string>
    <string name="open_settings_request">Предоставьте разрешения в настройках для выбора изображения</string>
    <string name="image_permission_denied">Чтобы выбрать изображение, нужно предоставить разрешения в настройках</string>
    <string name="exit_creation_title">Завершить создание плейлиста?</string>
    <string name="exit_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name_hint">Название</string>
    <string name="playlist_details">%1$s • %2$d %3$s</string>
    <string name="playlist_cover_image">playlist Cover Image</string>
    <string name="track_count"> %1$d %2$s </string>
    <string name="save">Сохранить</string>
    <string name="cover_file_name_template">cover_%d.jpg</string>
    <string name="share_icon">share icon</string>
    <string name="menu_icon">menu icon</string>
    <string name="details_template_text">300 минут • 98 треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактирование плейлиста</string>
</resources>