<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/playerBackgroundColor"
    android:orientation="vertical"
    android:theme="@style/SettingsTheme"
    android:layout_margin="@dimen/margin_16"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        style="@style/LibraryToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        app:contentInsetStart="0dp"
        app:title="@string/settings_button_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:text="@string/dark_theme"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitch"
            style="@style/SwitchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <ImageView
            android:id="@+id/shareIV"
            style="@style/SettingsIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_support" />

        <ImageView
            android:id="@+id/supportIV"
            style="@style/SettingsIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/termsIV"
            style="@style/SettingsIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>