<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="6dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SettingsIconStyle"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_4"
            android:padding="@dimen/padding_12"
            android:src="@drawable/light_modearrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ToolbarStyle"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingEnd="86dp"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/settings_title" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsTextViewStyle"
            android:paddingEnd="6dp"
            android:text="@string/dark_theme"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SwitchCompat" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsTextViewStyle"
            android:text="@string/share"/>

        <ImageView
            android:id="@+id/shareIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsIconStyle"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsTextViewStyle"
             android:text="@string/call_support"/>

        <ImageView
            android:id="@+id/supportIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsIconStyle"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsTextViewStyle"
            android:text="@string/user_agreement"/>

        <ImageView
            android:id="@+id/agreementIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsIconStyle"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>