<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/playerBackgroundColor"
    tools:context=".library.ui.newplaylist.NewPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <Button
        android:id="@+id/create_button"
        style="@style/CreatePlaylistButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toTopOf="@id/bottomBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        android:enabled="true"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/CreatePlaylistToolbarStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/playerBackgroundColor"
        app:title="@string/new_playlist"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextAppearance="@style/CreatePlaylistToolbarTitleTextAppearance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/imageFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover_image"
            android:scaleType="centerCrop"
            android:background="@drawable/create_playlist_imageview_shape" />

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/placeholder_image"
            app:srcCompat="@drawable/photo_placeholder" />
    </FrameLayout>

<!--    не забыть поменять плейсхолдер на изображение в глайд-->

<!--    Glide.with(context)-->
<!--    .load(imageUrl)-->
<!--    .into(coverImageView)-->
<!--    .clearOnDetach() // Удалить плейсхолдер, когда изображение загружено-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomOutlineBox"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/imageFrameLayout"
        android:hint="@string/playlist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomOutlineBox"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/playlistName"
        android:hint="@string/playlist_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@drawable/cursor" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>