<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/SearchTheme"
    android:background="@color/playerBackgroundColor"
    tools:ignore="ExtraText">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LibraryToolbarStyle"
        app:contentInsetStart="0dp"
        android:gravity="top"
        app:title="@string/search_button_text"
        >
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_8"
        android:background="@drawable/rounded_edittext"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText"
            style="@style/roundedEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/search"
            android:hint="@string/search_button_text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/imageViewClear"
            style="@style/SearchIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/YPBlue"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/searchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/searchPlaceholder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@null"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:src="@drawable/nothing_found_light"
            android:visibility="gone">

        </ImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/somethingWrongTexView"
            style="@style/SearchSmthWrongTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_24"
            android:gravity="center"
            tools:text="Ничего не нашлось">

        </androidx.appcompat.widget.AppCompatTextView>


        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textFontWeight="500"
            android:textSize="@dimen/textSize_14"
            android:visibility="gone"
            app:cornerRadius="54dp">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/historyLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SearchSmthWrongTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_8"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/you_ve_been_searching">

        </androidx.appcompat.widget.AppCompatTextView>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textFontWeight="500"
            android:textSize="@dimen/textSize_14"
            android:visibility="visible"
            app:cornerRadius="54dp">

        </Button>
    </LinearLayout>


</LinearLayout>